<resources>
    <string name="app_name">The Nameless</string>
    <string name="hello_text2">Let\'s get started...</string>
    <string name="hello_text3">Hello there,\nwelcome back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="new_here">New here?</string>
    <string name="sign_up_instead">Sign Up instead</string>
    <string name="get_on_board">Get on Board</string>
    <string name="name_hint">Name</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_am_already_a_member">I am already a member</string>
    <string name="ad_title">Ad title</string>
    <string name="describe_what_are_you_selling">Describe what are you selling</string>
    <string name="next">Next</string>
    <string name="price">Price</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
</resources>