<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="6dp"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_on_board"
        android:textSize="30sp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/name_editText"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:textSize="20sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email_editText"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signUp_password_editText"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textSize="20sp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/signUp_confirmPassword_editText"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword_hint"
        android:textSize="20sp"
        android:inputType="textPassword"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:id="@+id/signUp_progressBar"/>
    
    <Button
        android:id="@+id/signUp_signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/signUp_alreadyMember_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_already_a_member"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        android:padding="8dp"
        android:textSize="18sp"/>




</LinearLayout>